Fix all LaTeX errors

--- a/endangered-languages.tex
+++ b/endangered-languages.tex
@@ -18,7 +18,7 @@ All of these terms are controversial, and work within larger frameworks and onto
 
 \emph{Endangered} languages are human languages that are in danger of extinction. The term is borrowed from the scientific literature describing biological species; just as there exists as very real possibility that one day there will be no more Australasian Bittern specimens in the wilds of Australia, it is also possible that one day there may be no spoken examples of Guugu Yimithirr by first language speakers. The term is not completely analogous; we can still read Tocharian texts, but Tocharian is not considered to be a living language, but \textit{extinct}, as there are no speakers who use it regularly (and who are not scholars of obscure languages).
 
-{\it Endangered} languages, when used specifically within a terminological framework and not used generally to mean any language that is perceived to be in danger of extinction, are normally languages which have a high amount of speakers, and crucially are still teaching children the language. Children ensure that the language will live on to the next generation, and when this chain breaks, it is almost impossible to resurrect a language. A language would be endangered when it can be assumed that children will stop learning the language in the next hundred years (according to \citet{krauss92}). This can be difficult to judge, as the rate of deterioration can be high. For instance, Breton had over a million speakers in 1950, but today the numbers may be as low as 200,000. Its future is uncertain.
+{\it Endangered} languages are normally languages which have a high amount of speakers, and crucially are still teaching children the language. Children ensure that the language will live on to the next generation, and when this chain breaks, it is almost impossible to resurrect a language. A language would be endangered when it can be assumed that children will stop learning the language in the next hundred years (according to \citet{krauss92}). This can be difficult to judge, as the rate of deterioration can be high. For instance, Breton had over a million speakers in 1950, but today the numbers may be as low as 200,000. Its future is uncertain.
 
 \emph{Moribund} languages are languages which are {\it critically endangered}, in that there are no children currently learning the language and using it frequently, although there are speakers. Ainu is a good example, with roughly ten native speakers still living, all of whom are over 80 years old, \footnote{\href{https://www.ethnologue.com/language/ain}{https://www.ethnologue.com/language/ain}. \last{May~2}} although there are some struggling efforts to revive it \citep{hanks2017policy}. On the other side of the northern Pacific, Haida has a similar amount of native speakers, but because of the amount of immersion programmes, government-funded schools, and new domains for the language, it is not considered moribund. An example of a new domain for Haida would be a recent motion picture filmed entirely in Haida with ethnically Haida actors who learned their lines from the elders. \footnote{\href{https://www.nytimes.com/2017/06/11/world/americas/reviving-a-lost-language-of-canada-through-film.html}{https://www.nytimes.com/2017/06/11/world/americas/reviving-a-lost-language-of-canada-through-film.html}. \last{May~2}}
 
@@ -122,24 +122,23 @@ Lewis and Simons, the authors of Ethnologue \citep{lewis2009ethnologue}\footnote
 EGIDS - the Expanded GIDS - serves these needs by providing more granular definitions. It also draws on the extensive knowledge of languages and their usage provided not only by Ethnologue, but also by the UNESCO Atlas and the community of linguists working with the Summer Institute of Linguistics (SIL), who fund and published Ethnologue. Figure~\ref{table:egids} shows the main categories, taken from the Ethnologue website.\footnote{\href{https://www.ethnologue.com/about/language-status}{https://www.ethnologue.com/about/language-status}. \last{May~2}} The table has been updated since \citet{lewis2010assessing}, in particular to also account for signed languages \citep{bickford2015rating}. The addition of a Level 0 and two levels beneath the scale are evident, as well as more granularity in the GIDS scale, such as can be seen with Level 6, which now has two levels, Level 6a Vigorous and Level 6b Threatened.
 
 \begin{table}
-\begin{center}
-\begin{tabular}{|p{1cm}|p{3cm}|p{10cm}|} \hline
+\centering
+\begin{tabular}{|p{1.5cm}|p{2.5cm}|p{9cm}|} \hline
 \textbf{Level}	& \textbf{Label}	& \textbf{Description} \\ \hline
-0 	& International &  	The language is widely used between nations in trade, knowledge exchange, and international policy. \\ \hline
-1 	& National &  	The language is used in education, work, mass media, and government at the national level. \\ \hline
-2 	& Provincial &  	The language is used in education, work, mass media, and government within major administrative subdivisions of a nation. \\ \hline
-3 	& Wider &  Communication 	The language is used in work and mass media without official status to transcend language differences across a region. \\ \hline
-4 	& Educational &  	The language is in vigorous use, with standardization and literature being sustained through a widespread system of institutionally supported education. \\ \hline
-5 	& Developing &  	The language is in vigorous use, with literature in a standardized form being used by some though this is not yet widespread or sustainable. \\ \hline
-6a 	& Vigorous &  	The language is used for face-to-face communication by all generations and the situation is sustainable. \\ \hline
-6b 	& Threatened &  	The language is used for face-to-face communication within all generations, but it is losing users. \\ \hline
-7 	& Shifting &  	The child-bearing generation can use the language among themselves, but it is not being transmitted to children. \\ \hline
-8a 	& Moribund &  	The only remaining active users of the language are members of the grandparent generation and older. \\ \hline
-8b 	& Nearly &  Extinct 	The only remaining users of the language are members of the grandparent generation or older who have little opportunity to use the language. \\ \hline
-9 	& Dormant &  	The language serves as a reminder of heritage identity for an ethnic community, but no one has more than symbolic proficiency. \\ \hline
-10 	& Extinct &  	The language is no longer used and no one retains a sense of ethnic identity associated with the language. \\ \hline
+0 	& International &  	{\small The language is widely used between nations in trade, knowledge exchange, and international policy.} \\ \hline
+1 	& National &  	{\small The language is used in education, work, mass media, and government at the national level. } \\ \hline
+2 	& Provincial &  {\small 	The language is used in education, work, mass media, and government within major administrative subdivisions of a nation. } \\ \hline
+3 	& Wider & {\small  Communication 	The language is used in work and mass media without official status to transcend language differences across a region. } \\ \hline
+4 	& Educational & {\small  	The language is in vigorous use, with standardization and literature being sustained through a widespread system of institutionally supported education. } \\ \hline
+5 	& Developing &  {\small 	The language is in vigorous use, with literature in a standardized form being used by some though this is not yet widespread or sustainable. } \\ \hline
+6a 	& Vigorous &  {\small 	The language is used for face-to-face communication by all generations and the situation is sustainable. } \\ \hline
+6b 	& Threatened &  {\small 	The language is used for face-to-face communication within all generations, but it is losing users. } \\ \hline
+7 	& Shifting & {\small  	The child-bearing generation can use the language among themselves, but it is not being transmitted to children. } \\ \hline
+8a 	& Moribund & {\small  	The only remaining active users of the language are members of the grandparent generation and older. } \\ \hline
+8b 	& Nearly &  Extinct {\small 	The only remaining users of the language are members of the grandparent generation or older who have little opportunity to use the language. } \\ \hline
+9 	& Dormant &  	{\small The language serves as a reminder of heritage identity for an ethnic community, but no one has more than symbolic proficiency. } \\ \hline
+10 	& Extinct &  {\small 	The language is no longer used and no one retains a sense of ethnic identity associated with the language. } \\ \hline
 \end{tabular}
-\end{center}
 \caption{Expanded Graded Intergenerational Disruption Scale \citep{ethnologuewebsite}}
 \label{table:egids}
 \end{table}
@@ -174,7 +173,7 @@ The LEI uses four factors: intergenerational transmission, absolute number of sp
 \citet{lee2016assessing} point out further issues with some of the other assessments - most notably that "while the UNESCO framework is broad and its factors comprehensive, it does not give an overall vitality score to the language being assessed, making it difficult to compare accurately across different language" and that "while an assessment of the type and quality of documentation is doubtlessly important because it helps indicate the potential for revitalization and the urgency of further research, it is not clear that the type and quality of documentation directly affects the vitality of a language." These two points are interesting, because they reflect how the situation of \citet{lee2016assessing} influences their judgement and their decision in making LEI at all. The authors were aware that they were being overtly quantitative in their approach:
 
 \begin{quote}
-Some may prefer a more nuanced examination of a language's vitality, with the view that the factors responsible for a language's endangerment are too complex to be compared across languages. Researchers of this view would rally against quantitative measures, stating that quantitative measures can hardly be accurate. ... ELCat researchers, while sympathetic to these points of view, maintain that without understanding and investigating fundamental common factors responsible for language endangerment, very little progress will be made in assessing language vitality and, consequently, less can be done to help communities preserve their languages. ELCat strikes a balance between these different perspectives.
+Some may prefer a more nuanced examination of a language's vitality, with the view that the factors responsible for a language's endangerment are too complex to be compared across languages. Researchers of this view would rally against quantitative measures, stating that quantitative measures can hardly be accurate. ... ELCat researchers, while sympathetic to these points of view, maintain that without understanding and investigating fundamental common factors responsible for language endangerment, very little pro\-gress will be made in assessing language vitality and, consequently, less can be done to help communities preserve their languages. ELCat strikes a balance between these different perspectives.
 \end{quote}
 
 As \citet{grenoble2016response} points out, this misses the point of qualitative rebuttals, by claiming that accuracy is the most salient argument. It doesn't have to be, as there are more pressing concerns. For instance, all of the metrics were built on the assumptions that quantifying language endangerment is useful, and that assessment directly leads to empowering communities to revitalise their language. Neither of these are directly backed up by empirical research \citep{grenoble2016response}. More pressingly, language itself is not indisputably something that is countable or measurable, and to think so is to reflect Western, modernist ideologies surrounding language, viewing a language as a distinct entity which is formalised in writing and education. Language could be viewed alternatively as inextricable from the speaker and the utterance, and this view is more likely to be taken by language groups which view themselves as separate from a nation-state or an ethnographic group \citep{bodo2017language}. To view language otherwise is to confine language to a countable, commodifiable entity in a post-colonial sense, which affects how the language is viewed and can have real effects on language communities. Even viewing linguistic biodiversity as something to be 'saved' raises ideological  concerns, as Haspelmath (one of the main editors of \citet{wals}) notes.\footnote{\href{https://dlc.hypotheses.org/195}{https://dlc.hypotheses.org/195}. \last{May~2}} Indeed, post-colonial attitudes towards language endangerment may be endemic; \citet{newman1998we} certainly suggests that non-Western linguists cannot adequately document or revitalise their own languages without Western training, which presupposes that to be an informed researcher one must also conform to Western ideologies. Against this backdrop, \citet{lee2016assessing}'s claims that accuracy is something that can be attained seems to miss the mark; rather, the canonical approach to metrics is in itself a flawed approach that carries with it certain uncomfortable presumptions.
@@ -220,7 +219,7 @@ The reason is that children, as soon as they start using computers for anything 
 Ultimately, Kornai found that the best indicator of a language's digital presence was their EGIDS rating. "The next best set of features indicated the quality of the wikipedia, followed by the number of L1 speakers, the size of the Cr\'ubad\'an crawl, the existence of FLOSS spellcheckers, and the number of online texts listed in OLAC." \citep[6]{kornai2013digital} Overall, only 5\% of the world's languages were seen as digitally ascending; like most results from this field, an increasingly dire statistic. As \citet[10]{kornai2013digital} writes:
 
 \begin{quote}
-Unfortunately, at a practical level heritage projects (including wikipedia incubators) are haphazard, with no systematic programmes of documentation. Resources are often squandered, both in the EU and outside, on feel-good revitalization efforts that make no sense in light of the pre\"{e}xisting functional loss and economic incentives that work against language diversity \citep{ginsburgh2011many}.
+Unfortunately, at a practical level heritage projects (including wiki\-pedia incubators) are haphazard, with no systematic programmes of documentation. Resources are often squandered, both in the EU and outside, on feel-good revitalization efforts that make no sense in light of the pre\"{e}xisting functional loss and economic incentives that work against language diversity \citep{ginsburgh2011many}.
 \end{quote}
 
 However, others have noted that Kornai may have been early in his predictions that most languages will not digitally ascend \citep{gibson2016assessing}.
@@ -243,12 +242,12 @@ Dormant would be equitable to Latent, while Pre-digital would apply to languages
 
 \begin{table}
 \begin{center}
-\begin{tabular}{|p{2cm}|p{1cm}|p{10cm}|} \hline
+\begin{tabular}{|p{2cm}|p{1.5cm}|p{9.5cm}|} \hline
 Label & Grade & Localised software \\ \hline
-none & 2 & Neither operating system nor general purpose soft- ware localised in the language\\
-limited & 3 & At least one operating system (either desktop or mo- bile, either open or commercial) localised in the language \\
-medium & 4 & At least one desktop and one mobile operating system (either open or commercial) + some general purpose software (a word processor and a browser) localised in the language\\
-strong & 5 & Most used operating systems and general purpose software localised in the language; some specific purpose application software localised.\\
+none & 2 & Neither operating system nor general purpose soft- ware localised in the language\\ \hline
+limited & 3 & At least one operating system (either desktop or mo- bile, either open or commercial) localised in the language \\ \hline
+medium & 4 & At least one desktop and one mobile operating system (either open or commercial) + some general purpose software (a word processor and a browser) localised in the language\\ \hline
+strong & 5 & Most used operating systems and general purpose software localised in the language; some specific purpose application software localised.\\ \hline
 advanced & 6 & Main operating systems and application software localised in the language.  \\ \hline
 \end{tabular}
 \end{center}
