--- a/case-studies.tex
+++ b/case-studies.tex
@@ -24,8 +24,8 @@ Gaelic has a long, written history. Today, there are a plethora of written, audi
 
 Some of these corpora are annotated - for instance, the Annotated Reference Corpus of Scottish Gaelic (ARCOSG)\footnote{\href{https://datashare.is.ed.ac.uk/handle/10283/2011}{https://datashare.is.ed.ac.uk/handle/10283/2011}. \last{April~27}} \citep{ARCOSG2016, lamb2014scottish}, which used an Irish POS tagger \citep{ui2006part} to project annotations, and which was funded by the B\`ord na G\`aighlig. This resource was used to automatically derive categorial grammars \citep{batchelor2016automatic}, and to develop POS taggers directly for Gaelic \citep{lamb2014developing}. A dependcy-structure corpus is being developed \citep{batchelor2014gdbank}, as are word-embedding models \citep{lamb2016developing}. The source code for \citet{batchelor2014gdbank, batchelor2016automatic} is available on GitHub.\footnote{\href{https://github.com/colinbatchelor/gdbank/}{https://github.com/colinbatchelor/gdbank/}. \last{April~27}} Some of these papers were presented at the first Celtic Language Technology Workshop in Dublin in 2014. The amount of resources show clearly that Gaelic is not entirely on the fringe of academic research, although it is generally considered a low resource language.
 
-The Cr\'ubad\'an corpus was used to create an open source Hunspell spellchecker\footnote{\href{https://github.com/kscanne/hunspell-gd }{https://github.com/kscanne/hunspell-gd }. \last{April~27}}\footnote{\href{https://github.com/gooselinux/hunspell-gd}{https://github.com/gooselinux/hunspell-gd} is probably derivative. \last{April~27}}, which is the spellchecker for "LibreOffice, OpenOffice.org, Mozilla Firefox 3 and Thunderbird, Google Chrome, and it is also used by proprietary software packages, like macOS, InDesign, memoQ, Opera and SDL Trados."\footnote{\href{https://hunspell.github.io/}{https://hunspell.github.io/}. \last{April~27}} This spellchecker was built with the help of Michael Bauer, an independent Gaelic technologist who runs a small Gaelic technology consultancy called Am Faclair Beag\footnote{\href{http://www.faclair.com/}{http://www.faclair.com/}. \last{April~27}}, and also has ports for OpenOffice directly\footnote{\href{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}. \last{April~27}} and a Firefox extension.\footnote{\href{https://extensions.openoffice.org/en/project/faclair-afb}{https://extensions.openoffice.org/en/project/faclair-afb}. \last{April~27}} An Faclair Beag also offers an online dictionary with over 85k words\footnote{\href{http://www.faclair.com/GaelicDictionaryAbout.html\#About}{http://www.faclair.com/GaelicDictionaryAbout.html\#About}. \last{April~27}}
- (and almost a million forms\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html}. \last{April~27}}) and in inbuilt lemmatizer.\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html}. \last{April~27}}
+\citet{scannell2007crubadan} and contributors\footnote{\href{http://crubadan.org/acknowldegments}{http://crubadan.org/acknowldegments}. \last{May~2}} used the Cr\'ubad\'an corpus to create an open source Hunspell spellchecker,\footnote{\href{https://github.com/kscanne/hunspell-gd}{https://github.com/kscanne/hunspell-gd}. \last{April~27}} which is the spellchecker for "LibreOffice, OpenOffice.org, Mozilla Firefox 3 and Thunderbird, Google Chrome, and it is also used by proprietary software packages, like macOS, InDesign, memoQ, Opera and SDL Trados."\footnote{\href{https://hunspell.github.io/}{https://hunspell.github.io/}. \last{April~27}} This spellchecker was built with the help of Michael Bauer, an independent Gaelic technologist who runs a small Gaelic technology consultancy called Am Faclair Beag\footnote{\href{http://www.faclair.com/}{http://www.faclair.com/}. \last{April~27}}, and also has ports for OpenOffice directly\footnote{\href{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}. \last{April~27}} and a Firefox extension.\footnote{\href{https://extensions.openoffice.org/en/project/faclair-afb}{https://extensions.openoffice.org/en/project/faclair-afb}. \last{April~27}} An Faclair Beag also offers an online dictionary with over 85k words\footnote{\href{http://www.faclair.com/GaelicDictionaryAbout.html\#About}{http://www.faclair.com/GaelicDictionaryAbout.html\#About}. \last{April~27}}
+ (and almost a million forms\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html}. \last{April~27}}) and in inbuilt lemmatizer.\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html}. \last{April~27}} Another spellchecker also exists on GitHub,\footnote{\href{https://github.com/gooselinux/hunspell-gd}{https://github.com/gooselinux/hunspell-gd}. \last{April~27}} but it is probably derivative, and it has not been worked on recently.
 
  More complicated, higher level technology also exists. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh}. \last{April~27}} (pronounced 'Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\`ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\`{o}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/}. \last{April~27}}, which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
 
