Reorganization and cleanup

--- a/thesiscommands.sty
+++ b/thesiscommands.sty
@@ -290,3 +290,17 @@
 
 \makeatother
 % End possesives in natbib
+
+% Don't use tt for \nolinkurl commands
+\urlstyle{same}
+
+% Stop bugging me with minor errors
+% Turn on to check by eye \overfullrule=2cm
+\hbadness=99999 
+\hfuzz=20pt
+\vfuzz=20pt
+\vbadness=\maxdimen
+
+% IGT
+% Important; include last
+\usepackage{gb4e}
